Fixed spacing on navber

--- a/src/components/navbar/styles.scss
+++ b/src/components/navbar/styles.scss
@@ -39,6 +39,7 @@ nav ul li {
   transition: 0.5s;
   font-weight: 300;
   letter-spacing: 1.3px;
+  margin: 10px 10px 10px 10px;
 }
 .links:hover {
   color: rgb(184, 180, 180);
